tests/baselines/reference/withStatements.errors.txt
tests/cases/conformance/statements/withStatements/withStatements.ts(2,7): error TS2410: All symbols within a 'with' block will be resolved to 'any'.


==== tests/cases/conformance/statements/withStatements/withStatements.ts (1 errors) ====
    var x = 12;
    with (x) {
          ~
!!! error TS2410: All symbols within a 'with' block will be resolved to 'any'.
        name = 'twelve'
        id = 12
    }